Minor cleanup in project.clj